@@ -7,6 +7,7 @@
   <title><%=h yield(:title) || t('common.titles.untitled') %></title>
   <%# stylesheet_link_tag :all, :recursive => true, :cache => true %>
   <%# stylesheet_link_tag 'reset', 'application', :cache => true %>
+  <%= stylesheet_link_tag 'formtastic', 'formtastic_changes', :media => 'screen, projection', :cache => true %>
   <style type="text/css">
     #user_pannel, #locale_pannel, #locale_pannel form {display: inline}
   </style>
