@@ -2,12 +2,9 @@
 
 <p><%= t('password_resets.reset_note') %></p>
 
-<% form_tag password_resets_path do %>
-  <p>
-    <%= label_tag :email, at(User, :email) %><br />
-    <%= text_field_tag :email %>
-  </p>
-  <p>
-    <%= submit_tag t('password_resets.actions.reset') %>
-  </p>
+<% semantic_form_for User.new, :url => password_resets_path, :html => {:id => nil} do |f| %>
+  <% f.inputs do %>
+    <%= f.input :email %>
+    <%= f.commit_button :reset_password, :name => nil %>
+  <% end %>
 <% end %>
