@@ -5,41 +5,24 @@
 
 <%= error_messages_for :user_session, :object_name => UserSession.human_name %>
 
-<% form_for @user_session, :url => user_session_path do |f| %>
-<div id="password_box"<% unless @user_session.openid_identifier.blank? %> style="display: none;"<% end %>>
-  <p>
-    <%= f.label :login %><br />
-    <%= f.text_field :login %>
-  </p>
-  <p>
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
-  </p>
-  <p>
-    <%= f.label :remember_me %>
-    <%= f.check_box :remember_me %>
-  </p>
-  <p>
-    <%= f.submit t('user_sessions.actions.login'), :name => nil %> |
-    <%= link_to t('user_sessions.forget_password'), new_password_reset_path %>
-  </p>
-</div>
+<% semantic_form_for @user_session, :url => user_session_path do |f| %>
+  <% f.inputs :id => 'password_box', :style => (@user_session.openid_identifier.blank? ? nil : 'display: none;') do %>
+    <%= f.input :login %>
+    <%= f.input :password %>
+    <%= f.input :remember_me, :as => :check_boxes, :collection => [[nil, true]] %>
+    <%= f.commit_button :name => nil %>
+    <li class="password_reset">
+      <%= link_to t('user_sessions.forget_password'), new_password_reset_path %>
+    </li>
+  <% end %>
 <% end %>
 
-<% form_for @user_session, :url => user_session_path do |f| %>
-<div id="openid_box"<% if @user_session.openid_identifier.blank? %> style="display: none;"<% end %>>
-  <p>
-    <%= f.label :openid_identifier, openid_link %><br />
-    <%= f.text_field :openid_identifier %>
-  </p>
-  <p>
-    <%= f.label :remember_me %>
-    <%= f.check_box :remember_me %>
-  </p>
-  <p>
-    <%= f.submit t('user_sessions.actions.login'), :name => nil %>
-  </p>
-</div>
+<% semantic_form_for @user_session, :url => user_session_path do |f| %>
+  <% f.inputs :id => 'openid_box', :style => (@user_session.openid_identifier.blank? ? 'display: none;' : nil) do %>
+    <%= f.input :openid_identifier, :label => openid_link %>
+    <%= f.input :remember_me, :as => :check_boxes, :collection => [[nil, true]] %>
+    <%= f.commit_button :name => nil %>
+  <% end %>
 <% end %>
 
 </fieldset>
