@@ -1,20 +1,10 @@
 <% title t('users.titles.new') %>
 
-<% form_for @user, :url => account_path do |f| %>
-  <%= f.error_messages %>
-  <p>
-    <%= f.label :login %><br />
-    <%= f.text_field :login %>
-  </p>
-  <p>
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </p>
-  <p>
-    <%= f.label :openid_identifier, openid_link %><br />
-    <%= f.text_field :openid_identifier %>
-  </p>
-  <p>
-    <%= f.submit t('users.actions.signup'), :name => nil %>
-  </p>
+<% semantic_form_for @user, :url => account_path, :html => {:id => nil} do |f| %>
+  <% f.inputs do %>
+    <%= f.input :login %>
+    <%= f.input :email %>
+    <%= f.input :openid_identifier, :label => openid_link %>
+    <%= f.commit_button :name => nil %>
+  <% end %>
 <% end %>
