@@ -1,0 +1,10 @@
+en:
+  formtastic:
+    :yes: 'Yes'
+    :no: 'No'
+    create: 'Create'
+    save: 'Save'
+    submit: 'Submit'
+    required: 'Required'
+    search: 'Search'
+    reset: 'Reset'
