@@ -1,5 +1,6 @@
 == master
 
+* Use formtastic as form builder and retire i18n_lable
 
 == 0.6.0 released 2009-12-4
 
